# music-streaming-app

./: .gitignore  Dockerfile.webapp  LICENSE  README.md  docker-compose.yaml
.github/workflows/: check-frontend-build.yml  deploy-latest-changes.yaml
alt-back/: .env  Cargo.toml  Dockerfile  README.md
alt-back/.cargo/: config.toml
alt-back/.sqlx/: query-2b8a5fede3894e64f9138199ca6d05ffb5ae2c29bbdc1213e1ec356c83f26ab1.json  query-3cfa4a50e5cfbf8c17134fa6a6e4989c33349b5af4c52586aa85e003066f47b4.json  query-89cef9d2246896ce674f5f950c020f681da376807c93342519c1799e2ccbee20.json  query-8da94308a2219f5a060cd754b641151fee5302d596321a4deb78ae1cd0bc6b18.json
alt-back/migrations/: 20231124034056_create_authors.down.sql  20231124034056_create_authors.up.sql  20231124034057_create_audio_recordings.down.sql  20231124034057_create_audio_recordings.up.sql
alt-back/src/: dto.rs  error.rs  handlers.rs  main.rs  middleware.rs  path_lenses.rs
alt-back/src/entities/: audio_recording.rs  author.rs  mod.rs
alt-back/src/models/: api_version.rs  mod.rs
back/: .gitignore  Dockerfile  README.md  app.js  package-lock.json  package.json  pom.xml
back/database/: pom.xml
back/music_streaming_app/: pom.xml
back/security/: pom.xml
deployment/: Cargo.toml  README.md
deployment/src/: main.rs
docker-entrypoint-initdb.d/: init.sql
front/: .eslintrc  .gitignore  .prettierrc  Dockerfile  README.md  extensions.json  package-lock.json  package.json  settings.json
front/src/: App.jsx  App.tsx  main.jsx  main.tsx
front/src/layouts/: MainLayout.jsx  MainLayout.tsx
(+147 files in other folders)
