[package]
name = "alt-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "time",
] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "full"] }
axum = { version = "0.6.20", features = ["macros"] }
semver = { version = "1", features = ["serde"] }
thiserror = "1"
tower = "0.4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum_typed_multipart = "0.10.2"
derive_more = "0.99"
